--- a/index.html
+++ b/index.html
@@ -34,34 +34,7 @@
     </section>
     <!-- End Login -->
 
-    <!-- Navbar -->
-    <section id="navbar">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <img src="img/pTo5npR7c.png" width="60px" height="40px">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Comic</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Manga</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Game</a>
-              </li>
-            </ul>
-            <form class="d-flex">
-              <a id="butoon-logout" href="" class="btn btn-outline-dark">Logout</a>
-            </form>
-          </div>
-        </div>
-      </nav>
-    </section>
-    <!-- End Navbar -->
+
 
     <section id="comic-show">
       <div class="container bg bg-light mt-3">
@@ -105,15 +78,16 @@
       </div>
     </section>
   
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <section id="navbar">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-      <a class="navbar-brand" href="#">Hobbies</a>
+        <img src="img/pTo5npR7c.png" width="60px" height="40px">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="#">Comic <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="#">Comic</a>
           <a class="nav-link" href="#">Manga</a>
           <a class="nav-link" href="#">Games</a>
           <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Signout</a>
@@ -121,14 +95,16 @@
       </div>
       </div>
     </nav>
+  </section>
+  
 
-    <div class="jumbotron jumbotron-fluid">
+    <!-- <div class="jumbotron jumbotron-fluid">
       <div class="container">
         <img src="img/pacman.jpg" width="300" class="rounded-circle">
         <h1 class="display-4">MIRIS HOBBIES</h1>
         <p class="lead">We provide the latest collection of comics, mangas and games</p>
       </div>
-    </div>
+    </div> -->
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
@@ -142,9 +118,9 @@
       // }
       
       $(document).ready(() => {
-        $("#login").hide()
-        $("#navbar").show()
-        $("#comic-show").show()
+        $("#login").show()
+        $("#navbar").hide()
+        $("#comic-show").hide()
       })
     </script>
   </body>
