--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <title>MangaCom</title>
+    <title>MangaCom </title>
   </head>
   <body>
     <!-- Login -->
@@ -27,71 +28,23 @@
             <label for="exampleInputPassword1" class="form-label">Password</label>
             <input type="password" class="form-control" id="exampleInputPassword1">
           </div>
-          <button id="button-login" type="submit" class="btn btn-primary">Submit</button>
-          <a href="">Link</a>
+          <button type="submit" class="btn btn-primary" id="login-btn">Login</button>
+          <div class="g-signin2 btn" data-onsuccess="onSignIn"></div>
         </form>
       </div>
     </section>
     <!-- End Login -->
 
-    <!-- Search Manga -->
-    <section id="search-manga" style="margin-top: 70px;">
-      <div class="container bg bg-light mt-3">
-        <div id="search-manga-show" class="row">
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Title Manga</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <button id="button-search-manga" type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
-      </div>
-    </section>
-    <!-- End Search Manga -->
-
-    <!-- Search Comic -->
-    <section id="search-comic" style="margin-top: 70px;">
-      <div class="container bg bg-light mt-3">
-        <div id="search-comic-show" class="row">
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Title Comic</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <button id="button-search-comic" type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
-      </div>
-    </section>
-    <!-- End Search Comic -->
-
-    <!-- Search Game -->
-    <section id="search-game" style="margin-top: 70px;">
-      <div class="container bg bg-light mt-3">
-        <div id="search-game-show" class="row">
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputEmail1" class="form-label">Title Game</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            </div>
-            <button id="button-search-game" type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        </div>
-      </div>
-    </section>
-    <!-- End Search Game -->
 
 
-    <!-- Comic List -->
-    <section id="comic-show" style="margin-top: 70px;">
+    <section id="comic-show">
       <div class="container bg bg-light mt-3">
         <div id="list-comic-show" class="row">
 
           <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
             <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card Comic</h5>
+              <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -99,7 +52,7 @@
           <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
             <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card Comic</h5>
+              <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -107,7 +60,7 @@
           <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
             <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card Comic</h5>
+              <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -115,95 +68,7 @@
           <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
             <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card Comic</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Comic List -->
-
-    <!-- Game List -->
-    <section id="game-show" style="margin-top: 70px;">
-      <div class="container bg bg-light mt-3">
-        <div id="list-game-show" class="row">
-
-          <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
-            <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card Game</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
-            <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card Game</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
-            <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card Game</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
-            <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card Comic</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- End Game List -->
-
-    <!-- Manga List -->
-    <section id="manga-show" style="margin-top: 70px;">
-      <div class="container bg bg-light mt-3">
-        <div id="list-manga-show" class="row">
-
-          <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
-            <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card Manga</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
-            <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card Manga</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
-            <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card Manga</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-          <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 18rem; margin-left: 70px; margin-top: 30px;">
-            <img src="https://2game.com/media/catalog/product/cache/2/small_image/17f82f742ffe127f42dca9de82fb58b1/placeholder/default/2Game-Defalt-NEW_1.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card Manga</h5>
+              <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -213,10 +78,7 @@
         </div>
       </div>
     </section>
-    <!-- End Manga List -->
-
-
-  <!-- Navbar -->
+  
   <section id="navbar">
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
@@ -235,7 +97,6 @@
       </div>
     </nav>
   </section>
-  <!-- End navbar -->
   
 
     <!-- <div class="jumbotron jumbotron-fluid">
@@ -253,16 +114,14 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     
     <script>
+      // function auth(){
+
+      // }
       
       $(document).ready(() => {
         $("#login").show()
-        $("#navbar").show()
-        $("#search-manga").show()
-        $("#search-comic").show()
-        $("#search-game").show()
-        $("#comic-show").show()
-        $("#manga-show").show()
-        $("#game-show").show()
+        $("#navbar").hide()
+        $("#comic-show").hide()
       })
     </script>
   </body>
