--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
           </div>
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
             <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
           </div>
           <div class="mb-3">
             <label for="exampleInputPassword1" class="form-label">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1">
+            <input type="password" class="form-control" id="password">
           </div>
           <button id="button-login" type="submit" class="btn btn-primary">Submit</button>
           <a href="">Link</a>
@@ -41,7 +41,7 @@
           <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Title Manga</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="text" class="form-control" id="title-manga" aria-describedby="emailHelp">
             </div>
             <button id="button-search-manga" type="submit" class="btn btn-primary">Submit</button>
           </form>
@@ -57,7 +57,7 @@
           <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Title Comic</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="text" class="form-control" id="title-comic" aria-describedby="emailHelp">
             </div>
             <button id="button-search-comic" type="submit" class="btn btn-primary">Submit</button>
           </form>
@@ -73,7 +73,7 @@
           <form>
             <div class="mb-3">
               <label for="exampleInputEmail1" class="form-label">Title Game</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+              <input type="text" class="form-control" id="title-game" aria-describedby="emailHelp">
             </div>
             <button id="button-search-game" type="submit" class="btn btn-primary">Submit</button>
           </form>
